--- a/.gitignore
+++ b/.gitignore
@@ -138,10 +138,11 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/django
 
-front
+Front-End
 .idea
 /.idea
-.idea/
+.idea/workspace.xml
+/.idea/
 media
 static
 nabard/migrations
